@@ -1,6 +1,10 @@
 BillReminder 0.3.x
 ==================
 
+ Bugs:
+  #4 - Make setting an alarm really optional.
+   ref: http://code.google.com/p/billreminder/issues/detail?id=4
+
  Backend:
   * Changed BillReminder's command line parsing to use OptionParser.
 
